[package]
name = "futures-race"
description = "Deprecated in favor of futures-micro and futures-lite"
version = "1.1.0"
homepage = "https://github.com/r3v2d0g/futures-race"
repository = "https://github.com/r3v2d0g/futures-race"
documentation = "https://docs.rs/futures-race"
keywords = ["async", "await", "future", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[dependencies]
pin-project-lite = "0.1"
